# v2m-player

./: CMakeLists.txt  PLAY_ALL_rand.sh  phonemtab.h  ronan.cpp  sounddef.cpp  sounddef.h  synth.h  synth_core.cpp  tinyplayer.cpp  types.h  v2mconv.cpp  v2mconv.h  v2mplayer.cpp  v2mplayer.h
tool/: file.cpp  file.h
